Moved appinfo.json to project root
Can't commit changes to an ignored folder (deploy) thus appinfo should
be in the project root

--- a/appinfo.json
+++ b/appinfo.json
@@ -7,6 +7,6 @@
   "title": "Wi-Fi Drive",
   "uiRevision": "2",
   "icon": "assets/iconSmall.png",
-  "splashicon": "assets/iconSmall.png",
+  "splashicon": "assets/phone.png",
   "dockMode": true,
 }
